more resonable errors about name resolving in subqueries (BUG#1483)